# luisschwab.net

./: .gitignore  Cargo.toml  README.md  config.toml  justfile  next-sitemap.config.js  next.config.js  package-lock.json  package.json  rustfmt.toml  sort_quotes.py  tsconfig.json
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  zizmor.yml
assets/.well-known/: keybase.txt
assets/css/: base.css  katex.css  tufte.css
content/: 404.md  index.md
content/blog/: index.md
content/blog/caddy-tcp-http-same-port/: index.md
content/blog/from-dice-to-address/: index.md
content/blog/portable-self-hosting/: index.md
content/blog/tags/: index.md
content/netops/: index.md
posts/: books-2024.md  books-2025.md  from-dice-to-address.md  how-digital-signatures-work.md  portable-self-hosting.md  sovereign-bitcoin-stack.md  summer-of-bitcoin-2024.md
public/: 3AD29E6FA7031B76.txt  F3EC3AD29E6FA7031B76.txt  quotes.json  robots.txt  sitemap-0.xml  sitemap.xml
src/: quotes.rs  site.rs
src/assets/.well-known/: nostr.json
src/assets/css/: base.css  katex.css  tufte.css
src/components/: banner.module.css  banner.tsx  header.module.css  header.tsx  postContent.module.css  postContent.tsx  postIndex.module.css  postIndex.tsx  qotd.module.css  qotd.tsx  title.module.css  title.tsx  utterances.tsx  wrapper.module.css  wrapper.tsx
src/content/: index.md
src/content/blog/: features.md  index.md
src/content/blog/from-dice-to-address/: index.md
src/content/blog/portable-self-hosting/: index.md
src/engine/: config.rs  error.rs  markdown.rs  mod.rs  util.rs
src/lib/: library.js  posts.js
src/pages/: 404.tsx  _app.tsx  index.tsx
src/pages/blog/: [id].tsx  index.tsx
src/pages/lib/: [...id].tsx  index.tsx
src/styles/: globals.css  humanoid-dark.css
src/templates/: banner.html  base.html  blog_index_5.html  footer.html  index.html  navigation.html  sidebar.html
src/templates/blog/: blog.html  blog_index.html  blog_index_5.html  header.html  post_index.html  post_index_tag.html  toc.html
