[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "site"
path = "src/site.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
html-escape = "0.2.13"
katex = "0.4.6"
log = "0.4.29"
matter = "0.1.0-alpha4"
pulldown-cmark = "0.13.0"
pulldown-cmark-toc = "0.7.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5.3.0"
tera = "1.20.1"
thiserror = "2.0.18"
toml = "1.0.3"
walkdir = "2.5.0"
