[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "site"
path = "src/site.rs"

[dependencies]
anyhow = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.11" }
html-escape = { version = "0.2" }
katex = { version = "0.4" }
log = { version = "0.4" }
matter = { version = "0.1.0-alpha4" }
pulldown-cmark = { version = "0.13" }
pulldown-cmark-toc = { version = "0.7" }
regex = { version = "1.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
syntect = { version = "5" }
tera = { version = "1" }
thiserror = { version = "2" }
toml = { version = "1" }
walkdir = { version = "2" }
